2003-04-19  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (post): Add some additional access variables to
	$any.

	* lib/Mj/Access.pm (_d_post): Add invalid_from as an access
	variable causing consultation by default.
	(list_access_check): Turn logging of access variables back on;
	it's too useful.

2003-04-17  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_a_forward)  Use reply files
	to allow for language translation.

	* lib/Mj/Resend.pm:  (_post)  Bugfix:  Extract the
	author's address from the headers again when the
	message is archived; it may have been changed.
	Thanks to Brock Rozen.

2003-04-16  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/List.pm (is_subscriber): Add better logging for invalid
	and anonymous addresses.

2003-04-12  Michael Yount <csf@moscow.com>

	* lib/Mj/BounceHandler.pm:  (handle_bounce_user)  Add a
	"digest" bounce variable to support special bounce rules
	for digest users.  The variable will contain the name of
	the digest or an empty string.  Suggested by John Levine.

	* lib/Mj/CommandProps.pm:  Add support for the "digest"
	bounce variable.

	* lib/Mj/Digest/Build.pm:  (build)  Omit the leading "From "
	line when extracting messages from the archive.
	Thanks to Roger Klorese.

2003-04-11  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_announce)  Use the whoami_owner
	address in the From header of each announcement.

2003-04-10  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (do_digests)  Prevent "To" and "From"
	headers from being duplicated by the message_headers setting.

2003-04-08  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm:  (_make_aux)  Bugfix: Return undef if
	the sublist was not initialized.  Thanks to Mathieu Arnold.

	* setup/query_util.pl:  (prompt)  Allow answers to be read
	from a response file.  Implemented by Rudolph Maceyko.

2003-03-25  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/BounceParser.pm (parse): Accept owner-list as well as